--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -150,7 +150,7 @@
         }
 
         #top-row {
-            margin: 0px 0;
+            margin: 0px 0 10px 0;
             display: flex;
             justify-content: space-between;
             margin-top: 10px;
@@ -164,7 +164,6 @@
             align-items: center;
             width: 100%;
             gap: 20px;
-            padding-bottom: 10px;
         }
 
         .screenshot-controls {
