--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -219,7 +219,18 @@
         }
 
         #prevBtn,
-        #nextBtn,
+        #nextBtn {
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 42px;
+            height: 42px;
+            padding: 0;
+            color: transparent;
+            background-color: transparent;
+            border: none;
+        }
+
         #invertBtn,
         #screenshotBtn,
         #screenSaveBtn,
@@ -363,7 +374,11 @@
             }
 
             #prevBtn,
-            #nextBtn,
+            #nextBtn {
+                width: 62px;
+                height: 62px;
+            }
+
             #invertBtn,
             #screenshotBtn,
             #screenSaveBtn,
@@ -402,7 +417,11 @@
             }
 
             #prevBtn,
-            #nextBtn,
+            #nextBtn {
+                width: 37px;
+                height: 37px;
+            }
+
             #invertBtn,
             #screenshotBtn,
             #screenSaveBtn,
@@ -416,7 +435,11 @@
         @media (min-width: 1200px) {
 
             #prevBtn,
-            #nextBtn,
+            #nextBtn {
+                width: 104px;
+                height: 104px;
+            }
+
             #invertBtn,
             #screenshotBtn,
             #screenSaveBtn,
