--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -830,6 +830,7 @@
 
         <div class="settings-container">
             <button id="settingsBtn" onclick="openSettingsModal()" title="Настройки">⚙️</button>
+            <span>Настройки</span>
         </div>
         <div class="support-container">
             <button id="supportBtn" onclick="openSupportModal()" title="Техподержка"></button>
@@ -851,7 +852,6 @@
         <!-- Модальное окно настроек -->
         <div id="settingsModal" class="modal settings-modal">
             <div class="modal-content settings-modal-content">
-                <h2>Настройки</h2>
                 <div class="modal-body">
                     <div class="tabs-container">
                         <div class="tabs-header">
